--- a/index.html
+++ b/index.html
@@ -3,26 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frank & Fran's Facebook Widget</title>
+  <title>Frank & Fran's Fishing Reports</title>
 </head>
 <body>
   <h1>Frank & Fran's Fishing Reports</h1>
-  <div id="posts"></div>
+  <div id="posts" style="font-family: Arial, sans-serif;"></div>
   <script>
     fetch('/fb-posts')
-      .then(res => res.json())
+      .then(res => {
+        if (!res.ok) throw new Error("Network response was not ok");
+        return res.json();
+      })
       .then(data => {
         const postsDiv = document.getElementById('posts');
         data.forEach(post => {
-          const postBlock = document.createElement('div');
-          postBlock.style.marginBottom = "40px";
-          postBlock.innerHTML = `
-            <p>${post.text}</p>
-            <div>${post.images.map(img => `<img src="${img}" style="width:300px;margin:5px;">`).join('')}</div>
+          const block = document.createElement('div');
+          block.style.marginBottom = "40px";
+          block.innerHTML = `
+            <p>${post.text.replace(/\n/g, "<br>")}</p>
+            <div style="margin-top: 10px;">${post.images.map(img => `<img src="${img}" style="width:300px;margin:10px;">`).join('')}</div>
             <hr>
           `;
-          postsDiv.appendChild(postBlock);
+          postsDiv.appendChild(block);
         });
+      })
+      .catch(err => {
+        console.error('Error loading posts:', err);
+        document.getElementById('posts').innerHTML = `<p style="color:red;">Failed to load posts. Please refresh.</p>`;
       });
   </script>
 </body>
