--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frank & Fran's Fishing Reports</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f8f8;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      color: #003366;
+    }
+    .post-content {
+      font-size: 1.2em;
+      max-width: 1200px;
+      margin: 0 auto 40px auto;
+      text-align: left;
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    #slideshow img {
+      width: 500px;
+      margin: 20px 0;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Frank & Fran's Fishing Reports</h1>
-  <div id="posts" style="font-family: Arial, sans-serif;"></div>
+  <h1 id="header">Frank & Fran's Fishing Report</h1>
+  <div id="posts"></div>
+  <div id="slideshow"></div>
   <script>
     fetch('/fb-posts')
       .then(res => {
@@ -15,17 +45,33 @@
         return res.json();
       })
       .then(data => {
-        const postsDiv = document.getElementById('posts');
-        data.forEach(post => {
+        if (data.length > 0) {
+          const firstPost = data[0];
+          const lines = firstPost.text.split('\n');
+          const titleLine = lines.shift();
+          document.getElementById('header').innerText = titleLine;
+
+          const postsDiv = document.getElementById('posts');
           const block = document.createElement('div');
-          block.style.marginBottom = "40px";
-          block.innerHTML = `
-            <p>${post.text.replace(/\n/g, "<br>")}</p>
-            <div style="margin-top: 10px;">${post.images.map(img => `<img src="${img}" style="width:300px;margin:10px;">`).join('')}</div>
-            <hr>
-          `;
+          block.className = "post-content";
+          block.innerHTML = `<p>${lines.join('<br>')}</p>`;
           postsDiv.appendChild(block);
-        });
+
+          // Set up the slideshow
+          let slideIndex = 0;
+          const slideshow = document.getElementById('slideshow');
+          const images = firstPost.images;
+
+          function showSlide() {
+            slideshow.innerHTML = `<img src="${images[slideIndex]}" alt="Slide ${slideIndex+1}">`;
+            slideIndex = (slideIndex + 1) % images.length;
+          }
+
+          if (images.length > 0) {
+            showSlide(); // show first image immediately
+            setInterval(showSlide, 8000); // change every 8 seconds
+          }
+        }
       })
       .catch(err => {
         console.error('Error loading posts:', err);
