--- a/index.html
+++ b/index.html
@@ -4,51 +4,32 @@
 <head>
   <title>Frank & Fran's Fishing Report</title>
   <style>
-    body { background: #eef4fa; font-family: Arial; margin: 0; padding: 0; text-align: center; color: #0a2a5d; }
-    h1 { padding: 20px; }
-    .container { display: flex; justify-content: space-around; align-items: flex-start; padding: 20px; height: 80vh; }
-    .text { flex: 3; font-size: 2vw; text-align: left; background: white; padding: 20px; }
-    .images { flex: 2; background: #000; }
-    .images img { max-width: 100%; display: none; }
-    .images img.active { display: block; }
-    .error { color: red; font-size: 3vw; }
+    body { background: #eef4fa; font-family: Arial; margin: 0; padding: 0; }
+    h1 { text-align: center; padding: 20px; color: #002D62; }
+    .content { display: flex; justify-content: center; align-items: center; height: 80vh; }
+    .text { font-size: 2rem; color: #444; }
   </style>
 </head>
 <body>
-<h1>Frank & Fran's Fishing Report</h1>
-<div class="container">
-  <div class="text" id="text">Loading...</div>
-  <div class="images" id="images"></div>
-</div>
+  <h1>Frank & Fran's Fishing Report</h1>
+  <div class="content">
+    <div class="text" id="status">Loading...</div>
+  </div>
 
-<script>
-fetch('/api/posts').then(r=>r.json()).then(posts => {
-  if (!posts.length) {
-    document.getElementById('text').innerHTML = "<div class='error'>No fishing report found.</div>";
-    return;
-  }
-
-  const post = posts[0];
-  document.getElementById('text').innerText = post.text;
-
-  const container = document.getElementById('images');
-  post.images.forEach((src, i) => {
-    const img = document.createElement('img');
-    img.src = src;
-    if (i === 0) img.classList.add('active');
-    container.appendChild(img);
-  });
-
-  let index = 0;
-  setInterval(() => {
-    const imgs = document.querySelectorAll('#images img');
-    imgs.forEach(img => img.classList.remove('active'));
-    imgs[index % imgs.length].classList.add('active');
-    index++;
-  }, 4000);
-}).catch(() => {
-  document.getElementById('text').innerHTML = "<div class='error'>Failed to load posts.</div>";
-});
-</script>
+  <script>
+    fetch('/api/posts')
+      .then(res => res.json())
+      .then(data => {
+        if (!data.length) {
+          document.getElementById('status').innerText = "No fishing report found.";
+          return;
+        }
+        const post = data[0];
+        document.getElementById('status').innerText = post.text;
+      })
+      .catch(() => {
+        document.getElementById('status').innerText = "Failed to load posts. Please refresh.";
+      });
+  </script>
 </body>
 </html>
