--- a/index.html
+++ b/index.html
@@ -1,71 +1,23 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frank & Fran's Fishing Report</title>
-    <style>
-        body { font-family: Arial; margin: 0; background: #eef4fa; color: #001d4a; text-align: center; }
-        h1 { padding: 20px; }
-        #content { display: flex; justify-content: space-around; align-items: center; height: 90vh; }
-        #text { 
-        flex: 1; 
-        padding: 20px; 
-        overflow-y: auto; 
-        font-weight: bold;
-        font-size: clamp(20px, 3vw, 50px); 
-        line-height: 1.4;
-        word-wrap: break-word;
-    }
-        #photos { flex: 1; }
-        #photos img { max-width: 100%; max-height: 80vh; display: none; }
-        #photos img.active { display: block; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Frank & Fran's Fishing Report</h1>
-    <div id="content">
-        <div id="text">Loading...</div>
-        <div id="photos"></div>
+    <div id="container">
+        <div id="text-container">
+            <h1 id="header">Frank & Fran's Fishing Report</h1>
+            <div id="post-text">Loading...</div>
+        </div>
+        <div id="photo-container">
+            <img id="photo" src="" alt="Fishing Photo">
+        </div>
     </div>
-    <script>
-        async function fetchPosts() {
-            const res = await fetch('/fb-posts');
-            const posts = await res.json();
-            if (!posts.length) {
-                document.getElementById('text').innerText = 'Failed to load posts. Please refresh.';
-                return;
-            }
-            document.getElementById('text').innerText = posts[0].text;
-            posts[0].images.forEach(url => {
-                const img = document.createElement('img');
-                img.src = url;
-                document.getElementById('photos').appendChild(img);
-            });
-            let index = 0;
-            const imgs = document.querySelectorAll('#photos img');
-            if (imgs.length) imgs[0].classList.add('active');
-            setInterval(() => {
-                imgs[index].classList.remove('active');
-                index = (index + 1) % imgs.length;
-                imgs[index].classList.add('active');
-            }, 5000);
-        }
-        fetchPosts();
-    </script>
 
-<script>
-function adjustTextSize() {
-    const textContainer = document.getElementById('text');
-    let fontSize = parseInt(window.getComputedStyle(textContainer).fontSize);
-
-    while (textContainer.scrollHeight > textContainer.clientHeight && fontSize > 20) {
-        fontSize -= 1;
-        textContainer.style.fontSize = fontSize + "px";
-    }
-}
-
-window.onload = adjustTextSize;
-window.onresize = adjustTextSize;
-</script>
-
+    <script src="main.js"></script>
 </body>
 </html>
