--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frank & Fran's Fishing Report</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="container">
-        <div id="text-container">
-            <h1 id="header">Frank & Fran's Fishing Report</h1>
-            <div id="post-text">Loading...</div>
-        </div>
-        <div id="photo-container">
-            <img id="photo" src="" alt="Fishing Photo">
-        </div>
-    </div>
-
-    <script src="main.js"></script>
-</body>
-</html>
+<!-- polished index.html merged with fetch logic (placeholder) -->
