--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Frank & Fran's Fishing Report</title>
     <style>
         body { font-family: Arial; margin: 0; background: #eef4fa; color: #001d4a; text-align: center; }
-        h1 { padding: 20px; }
-        #content { display: flex; justify-content: space-around; align-items: center; height: 90vh; }
+        h1 { padding: 10px; font-size: 20px; }
+        #content { display: flex; justify-content: space-around; align-items: left; height: 90vh; }
         #text { flex: 1; font-size: 1.75vw; padding: 20px; overflow-y: auto; }
         #photos { flex: 1; }
         #photos img { max-width: 100%; max-height: 80vh; display: none; }
