--- a/fb-widget-main/index.html
+++ b/fb-widget-main/index.html
@@ -1,1 +1,112 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Frank & Fran's Fishing Report</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            background: #eef4fa;
+            color: #001d4a;
+            font-family: Arial, sans-serif;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
+        #header {
+            font-weight: bold;
+            font-size: 4vw;
+            text-align: center;
+            padding: 20px;
+            background-color: #dbe9f4;
+        }
+        #content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: calc(100% - 80px);
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        #text {
+            width: 48%;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: left;
+        }
+        #text-inner {
+            width: 100%;
+            font-size: 3vw;
+            line-height: 1.3;
+        }
+        #photos {
+            width: 48%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        #photos img {
+            max-width: 100%;
+            max-height: 100%;
+            display: none;
+            border-radius: 10px;
+        }
+        #photos img.active {
+            display: block;
+        }
+    </style>
+</head>
+<body>
+    <div id="header">Loading...</div>
+    <div id="content">
+        <div id="text"><div id="text-inner">Loading...</div></div>
+        <div id="photos"></div>
+    </div>
+<script>
+async function fetchPosts() {
+    const res = await fetch('/fb-posts');
+    const posts = await res.json();
+    if (!posts.length) {
+        document.getElementById('header').innerText = "No posts available.";
+        return;
+    }
 
+    const lines = posts[0].text.split('\n');
+    document.getElementById('header').innerText = lines[0];
+    const bodyText = lines.slice(1).join("\n");
+    const textInner = document.getElementById('text-inner');
+    textInner.innerText = bodyText;
+
+    // Dynamic font sizing
+    function resizeText() {
+        let size = 3; // starting vw size
+        textInner.style.fontSize = size + "vw";
+        while (textInner.scrollHeight > textInner.parentElement.clientHeight && size > 1) {
+            size -= 0.2;
+            textInner.style.fontSize = size + "vw";
+        }
+    }
+    resizeText();
+
+    posts[0].images.forEach(url => {
+        const img = document.createElement('img');
+        img.src = url;
+        document.getElementById('photos').appendChild(img);
+    });
+
+    let index = 0;
+    const imgs = document.querySelectorAll('#photos img');
+    if (imgs.length) imgs[0].classList.add('active');
+    setInterval(() => {
+        imgs[index].classList.remove('active');
+        index = (index + 1) % imgs.length;
+        imgs[index].classList.add('active');
+    }, 5000);
+}
+
+fetchPosts();
+</script>
+</body>
+</html>
