--- a/index.html
+++ b/index.html
@@ -1,82 +1,87 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frank & Fran's Fishing Reports</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f8f8f8;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-      color: #003366;
-    }
-    .post-content {
-      font-size: 1.2em;
-      max-width: 1200px;
-      margin: 0 auto 40px auto;
-      text-align: left;
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    #slideshow img {
-      width: 500px;
-      margin: 20px 0;
-      border-radius: 8px;
-    }
-  </style>
+    <title>Frank & Fran's Fishing Report</title>
+    <style>
+        body { font-family: Arial; margin: 0; background: #eef4fa; color: #001d4a; text-align: center; }
+        h1 { padding: 10px; font-size: 30px; }
+        #content { display: flex; justify-content: space-around; align-items: flex-start; height: 90vh; }
+        #text { flex: 1; font-size: 1.75vw; padding: 20px; overflow-y: auto; text-align: left; }
+        #photos { flex: 1; }
+        #photos img { max-width: 100%; max-height: 80vh; display: none; }
+        #photos img.active { display: block; }
+        #debug { position: fixed; bottom: 0; left: 0; background: rgba(0,0,0,0.8); color: #fff; padding: 5px; font-size: 12px; width: 100%; }
+    </style>
 </head>
 <body>
-  <h1 id="header">Frank & Fran's Fishing Report</h1>
-  <div id="posts"></div>
-  <div id="slideshow"></div>
-  <script>
-    fetch('/fb-posts')
-      .then(res => {
-        if (!res.ok) throw new Error("Network response was not ok");
-        return res.json();
-      })
-      .then(data => {
-        if (data.length > 0) {
-          const firstPost = data[0];
-          const lines = firstPost.text.split('\n');
-          const titleLine = lines.shift();
-          document.getElementById('header').innerText = titleLine;
+    <h1 id="header">Loading Header...</h1>
+    <div id="content">
+        <div id="text">Loading Post...</div>
+        <div id="photos"></div>
+    </div>
+    <div id="debug">Debug: Starting...</div>
 
-          const postsDiv = document.getElementById('posts');
-          const block = document.createElement('div');
-          block.className = "post-content";
-          block.innerHTML = `<p>${lines.join('<br>')}</p>`;
-          postsDiv.appendChild(block);
+    <script>
+        const debugEl = document.getElementById('debug');
 
-          // Set up the slideshow
-          let slideIndex = 0;
-          const slideshow = document.getElementById('slideshow');
-          const images = firstPost.images;
-
-          function showSlide() {
-            slideshow.innerHTML = `<img src="${images[slideIndex]}" alt="Slide ${slideIndex+1}">`;
-            slideIndex = (slideIndex + 1) % images.length;
-          }
-
-          if (images.length > 0) {
-            showSlide(); // show first image immediately
-            setInterval(showSlide, 8000); // change every 8 seconds
-          }
+        function debug(msg) {
+            console.log(msg);
+            debugEl.innerText = "Debug: " + msg;
         }
-      })
-      .catch(err => {
-        console.error('Error loading posts:', err);
-        document.getElementById('posts').innerHTML = `<p style="color:red;">Failed to load posts. Please refresh.</p>`;
-      });
-  </script>
+
+        async function fetchPosts() {
+            debug("Fetching posts...");
+            try {
+                const res = await fetch('/fb-posts');
+                debug("Fetch result status: " + res.status);
+                if (!res.ok) {
+                    debug("Fetch error: " + res.statusText);
+                    document.getElementById('text').innerText = 'Failed to load posts. Please refresh.';
+                    return;
+                }
+
+                const posts = await res.json();
+                debug("Posts received: " + posts.length);
+                if (!posts.length) {
+                    document.getElementById('text').innerText = 'No posts found.';
+                    return;
+                }
+
+                const post = posts[0];
+                const lines = post.text.split('\n');
+                document.getElementById('header').innerText = lines[0];
+                document.getElementById('text').innerText = post.text;
+
+                post.images.forEach(url => {
+                    const img = document.createElement('img');
+                    img.src = url;
+                    img.onload = () => debug("Loaded image: " + url);
+                    img.onerror = () => debug("Image failed: " + url);
+                    document.getElementById('photos').appendChild(img);
+                });
+
+                startSlideshow();
+            } catch (e) {
+                debug("Exception: " + e);
+            }
+        }
+
+        function startSlideshow() {
+            const images = document.querySelectorAll('#photos img');
+            if (!images.length) return;
+
+            let current = 0;
+            images[current].classList.add('active');
+
+            setInterval(() => {
+                images[current].classList.remove('active');
+                current = (current + 1) % images.length;
+                images[current].classList.add('active');
+            }, 8000);
+        }
+
+        fetchPosts();
+    </script>
 </body>
 </html>
